# CPP4_3DViewer_v2

./: Makefile
objparser/: objparser.cpp  objparser.h  parsertypes.h
s21_3dViewer2/: CMakeLists.txt  main.cpp  resource.qrc  viewData.h
s21_3dViewer2/Controller/: v2Controller.cpp  v2Controller.h
s21_3dViewer2/Model/: v2Model.cpp  v2Model.h
s21_3dViewer2/QtGifImage-master/: CMakeLists.txt
s21_3dViewer2/View/: MyQOpenGLWidget.cpp  MyQOpenGLWidget.h  v2MainView.cpp  v2MainView.h  v2MainView.ui
s21_3dViewer2/View/Shaders/: source.frag  source.vert
tests/: tests.cpp  tests.h
